--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <td><input type="date" id="check_out" name="check_out" /></td>
         </tr>
         <tr>
-          <td>&nbsp;</td>
+          <td>Button</td>
           <td>
             <input type="submit" name="Submit" value="Kirim" />
             <input type="reset" name="Submit2" value="Batal" />
